fix media on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,9 @@ h2 {
   font-size: 2.25rem;
   font-weight: 700;
   margin-bottom: 3rem;
-  @media (min-width: 1024px) {
+}
+@media (min-width: 1024px) {
+  h2 {
     font-size: 3rem;
     margin-bottom: 5rem;
   }
